# ice-uni-project

./: .gitignore  Images.md  README.md  references.md  updates.md
crypto-widget-element/: index.html  script.js  style.css
crypto-widgets/: index.html  package-lock.json  package.json
crypto-widgets-server/: Cargo.toml
crypto-widgets-server/src/: coinmarketcap.rs  main.rs  scheduler.rs  webserver.rs
crypto-widgets-server/src/webserver/: webserver.rs
crypto-widgets/src/: App.vue  main.js  style.css
crypto-widgets/src/components/: Coin.vue  DropDown.vue  Footer.vue  HelloWorld.vue  Navbar.vue  Slidebar.vue
crypto-widgets/src/components/widget/: style.css  widget.js  widget.vue
